# relayna-gateway

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrep.yml  .trivyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLANS.md  README.md  SECURITY.md  SKILLS.md  deny.toml  mkdocs.yml  package-lock.json  package.json
.codex/skills/code-change-verification/: SKILL.md
.codex/skills/implementation-strategy/: SKILL.md
.codex/skills/karpathy/: SKILL.md
.codex/skills/pr-draft-summary/: SKILL.md
.codex/skills/production-freeze-guard/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  studio_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/codex/prompts/: pr-labels.md  release-review.md
.github/codex/schemas/: pr-labels.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/gateway-api/: Cargo.toml
crates/gateway-api/admin-ui/: index.html  package.json  tsconfig.json  vite.config.ts
crates/gateway-api/admin-ui/src/: app.css  design-system.ts  main.ts
crates/gateway-api/admin-ui/src/design-system/: README.md  components.ts  index.ts  templates.ts  tokens.css  view-meta.ts
crates/gateway-api/src/: app.rs  config.rs  main.rs
crates/gateway-api/src/static/admin-ui/: app.css  app.js  index.html
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: admin.rs  auth.rs  auth_settings.rs  budgets.rs  entra.rs  errors.rs  guardrails.rs  lib.rs  observability.rs  operators.rs  policies.rs  projects.rs  provider_configs.rs  provider_intelligence.rs  rate_limits.rs  route_settings.rs  routing.rs  services.rs  studio_settings.rs  usage.rs
crates/gateway-proxy/: Cargo.toml
crates/gateway-proxy/src/: body_rewrite.rs  lib.rs  litellm.rs  pingora_plane.rs
crates/gateway-store/: Cargo.toml
crates/gateway-store/migrations/: 20260508000100_phase_1_core_proxy.sql  20260509000100_phase_2_policy_keys_limits_budget.sql  20260509000200_phase_3_5_usage_routing_observability.sql  20260510000100_phase_6_service_registry.sql  20260510000200_phase_7_operator_tokens.sql  20260511000100_openai_route_settings.sql  20260512000100_admin_projects_provider_configs.sql  20260514000100_project_first_key_service_links.sql  20260516000100_studio_connection_settings.sql  20260516000200_guardrail_registry_policy_events.sql  20260516000600_key_guardrail_config_overrides.sql  20260522000100_operator_scopes_audit_events.sql  20260523000100_policy_governance_lifecycle.sql  20260523000200_provider_intelligence.sql  20260523000300_phase_4_observability_analytics.sql  20260525000100_service_health_check_paths.sql  20260530000100_litellm_embeddings_route.sql  20260530000200_gateway_auth_settings.sql  20260531000100_litellm_credential_mapping.sql  20260618000100_litellm_passthrough_settings.sql  20260619000100_litellm_credential_header_value_format.sql
crates/gateway-store/src/: lib.rs  postgres.rs  redis.rs
crates/gateway-store/tests/: control_state_integration.rs
crates/gateway-telemetry/: Cargo.toml
crates/gateway-telemetry/src/: lib.rs
deploy/kubernetes/: relayna-gateway.yaml
docs/: admin-portal.md  apigee-gateway-path.md  architecture.md  current-features.md  database.md  deployment.md  entra-id-auth.md  getting-started.md  guardrails.md  index.md  litellm-passthrough.md  operations.md  provider-intelligence.md  redis.md  releases.md  security-exceptions.md
docs/assets/: mermaid-init.js
docs/assets/stylesheets/: extra.css
internal/: codex-roadmap-goals.md  design-manifesto.md  entra-id-gateway-auth-design.html  mvp-phase-roadmap.md
internal/execplans/: admin-ui-2-design-system.md  admin-ui-control-base-path.md  admin-ui-entra-apigee-auth-settings.md  env-admin-token-bootstrap.md  issue-24-admin-studio-connection.md  issue-26-policy-driven-guardrail-pipeline.md  issue-37-security-foundation-operator-governance.md  issue-38-policy-governance-key-lifecycle-explainability.md  issue-42-supply-chain-security-hardened-deployment.md  issue-60-entra-id-front-door-auth.md  issue-66-litellm-ui-access.md  issue-68-litellm-passthrough-auth.md  issue-70-litellm-custom-header-bearer.md  issue-76-policy-simulator-service-validation.md  issues-12-15-admin-projects-providers-costs.md  issues-17-19-studio-import-route-rewrite-no-expiry.md  issues-21-22-project-first-admin-ui.md  issues-72-74-litellm-policy-operator-fixes.md  issues-9-10-release-hardening.md  litellm-credential-mapping.md  open-issues-55-58-service-health-policy-ui.md  phase-1-core-proxy-mvp.md  phase-2-policy-keys-rate-limit-budget.md  phase-3-provider-intelligence-resilient-upstream-orchestration.md  phase-3-streaming-usage-tracking.md  phase-4-advanced-routing-runtime-integration.md  phase-4-observability-analytics-operational-intelligence.md  phase-5-studio-observability-production.md  phase-6-admin-service-registry.md  phase-7-admin-ui-operator-console.md  phase-8-budget-counter-rehydration.md  phase-9-traffic-intelligence-control-plane.md  production-freeze-v0.0.14-perimeter.md  production-freeze-v0.0.9-perimeter.md  release-0.0.2-readiness.md
internal/test-reports/: admin-portal-persisted-routing-2026-05-12.md
internal/test-reports/admin-auth-settings/: report.html
internal/test-reports/entra-front-door-real-env/: docker-compose.yml  report.md  results.json  run.sh
internal/test-reports/front-door-penetration/: docker-compose.yml  litellm_config.yaml  report.md  results.json  run.sh
internal/test-reports/litellm-real-passthrough/: docker-compose.yml  entra-disabled-ui-screenshots.json  issue-66-browser-url-screenshots.json  issue-68-evidence.html  report.md  (+5 more)
scripts/: run-gateway.sh  validate-release-metadata.py
tests/: admin-ui-design-system.test.mjs  admin-ui.test.mjs  freeze-v0.0.14-perimeter.test.mjs  freeze-v0.0.9-perimeter.test.mjs  freeze-v0.1.0-perimeter.test.mjs  freeze-v0.1.10-perimeter.test.mjs  freeze-v0.1.11-perimeter.test.mjs  freeze-v0.1.12-perimeter.test.mjs  freeze-v0.1.7-perimeter.test.mjs  freeze-v0.1.8-perimeter.test.mjs  freeze-v0.1.9-perimeter.test.mjs
(+6 files in other folders)
