[workspace]
members = [
    "crates/gateway-api",
    "crates/gateway-core",
    "crates/gateway-proxy",
    "crates/gateway-store",
    "crates/gateway-telemetry",
]
resolver = "2"

[workspace.package]
version = "0.1.14"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sarattha/relayna-gateway"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.4.0"
bytes = "1.11.1"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
pingora-core = "0.8.0"
pingora-http = "0.8.0"
pingora-proxy = "0.8.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "request-id", "util"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
url = "2.5.7"
