[package]
name = "gateway-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
gateway-core = { path = "../gateway-core" }
gateway-proxy = { path = "../gateway-proxy" }
gateway-store = { path = "../gateway-store" }
gateway-telemetry = { path = "../gateway-telemetry" }
http.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
argon2.workspace = true
tower.workspace = true
wiremock.workspace = true

