[package]
name = "gateway-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
gateway-core = { path = "../gateway-core" }
gateway-proxy = { path = "../gateway-proxy" }
gateway-store = { path = "../gateway-store" }
gateway-telemetry = { path = "../gateway-telemetry" }
http.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
