[package]
name = "gateway-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gateway-core = { path = "../gateway-core" }
gateway-telemetry = { path = "../gateway-telemetry" }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
http.workspace = true
pingora-core.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
