[package]
name = "gateway-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gateway-core = { path = "../gateway-core" }
redis.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
